--- a/update-checker/pom.xml
+++ b/update-checker/pom.xml
@@ -41,7 +41,7 @@
                             <ignoreVersion>
                                 <!-- ignore versions like 4.12.0.redhat-003 or 1.4.2.jenkins-1 -->
                                 <type>regex</type>
-                                <version>\d+\.\d+\.\d+\.[a-z].*</version>
+                                <version>\d+\.\d+\.\d+\.(Final-)?[a-z].*</version>
                             </ignoreVersion>
                             <ignoreVersion>
                                 <!-- ignore versions like 4.0.0.Alpha1, 2.1.0.Beta1 and 1.4.0.CR1 (but still allow 2.0.2.Final) -->
@@ -87,11 +87,11 @@
                                 </ignoreVersions>
                             </rule>
                             <rule>
-                                <groupId>net.javacrumbs.json-unit</groupId>
-                                <artifactId>json-unit</artifactId>
+                                <groupId>com.github.tomakehurst</groupId>
+                                <artifactId>wiremock</artifactId>
                                 <comparisonMethod>maven</comparisonMethod>
                                 <ignoreVersions>
-                                    <!-- json-unit 3.x requires Java 17 -->
+                                    <!-- use new groupId org.wiremock for version 3 -->
                                     <ignoreVersion>
                                         <type>regex</type>
                                         <version>3\..*</version>
@@ -298,6 +298,12 @@
                     <groupId>nl.jqno.equalsverifier</groupId>
                     <artifactId>equalsverifier</artifactId>
                     <scope>test</scope>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>com.google.guava</groupId>
+                            <artifactId>guava</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
 
                 <dependency>
@@ -320,6 +326,10 @@
                     <artifactId>wiremock</artifactId>
                     <scope>test</scope>
                     <exclusions>
+                        <exclusion>
+                            <groupId>com.google.guava</groupId>
+                            <artifactId>guava</artifactId>
+                        </exclusion>
                         <exclusion>
                             <groupId>javax.servlet</groupId>
                             <artifactId>servlet-api</artifactId>
@@ -360,12 +370,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>${maven.dependency.plugin.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>junit</groupId>
-                            <artifactId>junit</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.maven.plugins</groupId>
