--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>quarkus-3.0</module>
         <module>quarkus-3.2</module> <!-- 3.2 has LTS (https://quarkus.io/blog/lts-releases/) and is latest Red Hat build: https://access.redhat.com/articles/4966181 -->
         <module>quarkus-3.4</module>
+        <module>quarkus-3.5</module>
         <module>wildfly-26.1</module>
         <module>wildfly-28</module>
         <module>wildfly-29</module>
