Add quarkus 3.6 and wildfly 30
add versions-maven-plugin to update-checker

--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,11 @@
         <module>quarkus-3.2</module> <!-- 3.2 has LTS (https://quarkus.io/blog/lts-releases/) and is latest Red Hat build: https://access.redhat.com/articles/4966181 -->
         <module>quarkus-3.4</module>
         <module>quarkus-3.5</module>
+        <module>quarkus-3.6</module>
         <module>wildfly-26.1</module>
         <module>wildfly-28</module>
         <module>wildfly-29</module>
+        <module>wildfly-30</module>
         <module>update-checker</module>
     </modules>
 
@@ -74,29 +76,29 @@
 
         <!-- non-apache maven plugin versions -->
         <asciidoctor.plugin.version>2.2.4</asciidoctor.plugin.version>
-        <build-helper.plugin.version>3.4.0</build-helper.plugin.version>
+        <build-helper.plugin.version>3.5.0</build-helper.plugin.version>
         <docker.plugin.version>0.43.4</docker.plugin.version>
         <extra-enforcer-rules.plugin.version>1.7.0</extra-enforcer-rules.plugin.version>
         <jacoco.plugin.version>0.8.11</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.13</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>7.0.1</openapi-generator.plugin.version>
-        <swagger-codegen.plugin.version>3.0.49</swagger-codegen.plugin.version>
-        <versions.plugin.version>2.16.1</versions.plugin.version>
-        <wildfly.plugin.version>4.2.0.Final</wildfly.plugin.version>
+        <openapi-generator.plugin.version>7.1.0</openapi-generator.plugin.version>
+        <swagger-codegen.plugin.version>3.0.51</swagger-codegen.plugin.version>
+        <versions.plugin.version>2.16.2</versions.plugin.version>
+        <wildfly.plugin.version>4.2.1.Final</wildfly.plugin.version>
 
         <!-- apache maven plugin versions (in alphabetical order) -->
         <maven.assembly.plugin.version>3.6.0</maven.assembly.plugin.version>
-        <maven.clean.plugin.version>3.3.1</maven.clean.plugin.version>
+        <maven.clean.plugin.version>3.3.2</maven.clean.plugin.version>
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
         <maven.dependency.plugin.version>3.6.1</maven.dependency.plugin.version>
         <maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
         <maven.ear.plugin.version>3.3.0</maven.ear.plugin.version>
         <maven.ejb.plugin.version>3.2.1</maven.ejb.plugin.version>
         <maven.enforcer.plugin.version>3.4.1</maven.enforcer.plugin.version>
-        <maven.failsafe.plugin.version>3.2.1</maven.failsafe.plugin.version>
+        <maven.failsafe.plugin.version>3.2.3</maven.failsafe.plugin.version>
         <maven.install.plugin.version>3.1.1</maven.install.plugin.version>
         <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
-        <maven.javadoc.plugin.version>3.6.0</maven.javadoc.plugin.version>
+        <maven.javadoc.plugin.version>3.6.3</maven.javadoc.plugin.version>
         <maven.rar.plugin.version>3.0.0</maven.rar.plugin.version>
         <maven.release.plugin.version>3.0.1</maven.release.plugin.version>
         <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
@@ -108,8 +110,8 @@
         <maven.war.plugin.version>3.4.0</maven.war.plugin.version>
 
         <!-- artifact versions -->
-        <apache.commons.lang3.version>3.13.0</apache.commons.lang3.version>
-        <logback.version>1.4.11</logback.version>
+        <apache.commons.lang3.version>3.14.0</apache.commons.lang3.version>
+        <logback.version>1.4.14</logback.version>
         <lombok.version>1.18.30</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
@@ -117,8 +119,8 @@
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.15.3</jackson-2-version>
-        <jackson-bom.version>2.15.3</jackson-bom.version>
+        <jackson-2-version>2.16.0</jackson-2-version>
+        <jackson-bom.version>2.16.0</jackson-bom.version>
 
         <!-- latest version for projects independent of an application server (AS) -->
         <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
@@ -134,20 +136,20 @@
         <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
         <!-- (check `version.asm` in maven3_repo\net\bytebuddy\byte-buddy-parent\x.y.z\byte-buddy-parent-x.y.z.pom) -->
         <asm.version>9.6</asm.version>
-        <byte-buddy.version>1.14.9</byte-buddy.version>
+        <byte-buddy.version>1.14.10</byte-buddy.version>
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.3.0</opentest4j.version>
-        <junit.platform.version>1.10.0</junit.platform.version>
-        <junit.jupiter.version>5.10.0</junit.jupiter.version>
+        <junit.platform.version>1.10.1</junit.platform.version>
+        <junit.jupiter.version>5.10.1</junit.jupiter.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <mockito.version>5.6.0</mockito.version>
-        <equalsverifier.version>3.15.2</equalsverifier.version>
+        <mockito.version>5.8.0</mockito.version>
+        <equalsverifier.version>3.15.4</equalsverifier.version>
         <json.unit.version>3.2.2</json.unit.version>
         <jsonassert.version>1.5.1</jsonassert.version>
-        <restassured.version>5.3.2</restassured.version>
+        <restassured.version>5.4.0</restassured.version>
         <wiremock2.version>2.27.2</wiremock2.version>
-        <wiremock.version>3.2.0</wiremock.version>
+        <wiremock.version>3.3.1</wiremock.version>
 
         <!-- Docker has a special DNS name 'host.docker.internal', but only starting with Docker 18.03... -->
         <!-- Simulating this variable depending on the OS (see also the profiles below overriding it) -->
@@ -638,6 +640,11 @@
                     <groupId>io.swagger.codegen.v3</groupId>
                     <artifactId>swagger-codegen-maven-plugin</artifactId>
                     <version>${swagger-codegen.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>${versions.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.wildfly.plugins</groupId>
