--- a/wildfly-31/pom.xml
+++ b/wildfly-31/pom.xml
@@ -96,6 +96,9 @@
 
         <!-- Latest Wildfly plugin -->
         <wildfly.maven.plugin.version>${wildfly.plugin.version}</wildfly.maven.plugin.version>
+
+        <!-- wildfly-microprofile 31.0.0.Final overwrites snappy-java with an older and vulnerable version (1.1.8.4) -->
+        <version.org.xerial.snappy>1.1.10.5</version.org.xerial.snappy>
     </properties>
 
     <dependencyManagement>
@@ -131,6 +134,12 @@
                 <version>${jackson-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <!-- wildfly-microprofile 31.0.0.Final overwrites snappy-java with an older and vulnerable version (1.1.8.4) -->
+            <dependency>
+                <groupId>org.xerial.snappy</groupId>
+                <artifactId>snappy-java</artifactId>
+                <version>${version.org.xerial.snappy}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
