--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>quarkus-3.5</module>
         <module>quarkus-3.6</module>
         <module>quarkus-3.7</module>
+        <module>quarkus-3.8</module> <!-- 3.8 has LTS (https://quarkus.io/blog/quarkus-3-8-released/) -->
+        <module>quarkus-3.9</module>
         <module>wildfly-26.1</module>
         <module>wildfly-28</module>
         <module>wildfly-29</module>
@@ -77,21 +79,21 @@
         <!-- for plugins see also the section in README.md -->
 
         <!-- non-apache maven plugin versions -->
-        <asciidoctor.plugin.version>2.2.5</asciidoctor.plugin.version>
+        <asciidoctor.plugin.version>3.0.0</asciidoctor.plugin.version>
         <build-helper.plugin.version>3.5.0</build-helper.plugin.version>
-        <docker.plugin.version>0.43.4</docker.plugin.version>
-        <extra-enforcer-rules.plugin.version>1.7.0</extra-enforcer-rules.plugin.version>
-        <jacoco.plugin.version>0.8.11</jacoco.plugin.version>
+        <docker.plugin.version>0.44.0</docker.plugin.version>
+        <extra-enforcer-rules.plugin.version>1.8.0</extra-enforcer-rules.plugin.version>
+        <jacoco.plugin.version>0.8.12</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.13</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>7.2.0</openapi-generator.plugin.version>
-        <swagger-codegen.plugin.version>3.0.52</swagger-codegen.plugin.version>
+        <openapi-generator.plugin.version>7.4.0</openapi-generator.plugin.version>
+        <swagger-codegen.plugin.version>3.0.54</swagger-codegen.plugin.version>
         <versions.plugin.version>2.16.2</versions.plugin.version>
         <wildfly.plugin.version>4.2.2.Final</wildfly.plugin.version>
 
         <!-- apache maven plugin versions (in alphabetical order) -->
-        <maven.assembly.plugin.version>3.6.0</maven.assembly.plugin.version>
+        <maven.assembly.plugin.version>3.7.1</maven.assembly.plugin.version>
         <maven.clean.plugin.version>3.3.2</maven.clean.plugin.version>
-        <maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
+        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
         <maven.dependency.plugin.version>3.6.1</maven.dependency.plugin.version>
         <maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
         <maven.ear.plugin.version>3.3.0</maven.ear.plugin.version>
@@ -105,24 +107,24 @@
         <maven.release.plugin.version>3.0.1</maven.release.plugin.version>
         <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
         <maven.scm.plugin.version>2.0.1</maven.scm.plugin.version>
-        <maven.shade.plugin.version>3.5.1</maven.shade.plugin.version>
+        <maven.shade.plugin.version>3.5.2</maven.shade.plugin.version>
         <maven.site.plugin.version>3.12.1</maven.site.plugin.version>
-        <maven.source.plugin.version>3.3.0</maven.source.plugin.version>
+        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
         <maven.surefire.plugin.version>${maven.failsafe.plugin.version}</maven.surefire.plugin.version>
         <maven.war.plugin.version>3.4.0</maven.war.plugin.version>
 
         <!-- artifact versions -->
         <apache.commons.lang3.version>3.14.0</apache.commons.lang3.version>
-        <logback.version>1.4.14</logback.version>
-        <lombok.version>1.18.30</lombok.version>
+        <logback.version>1.5.3</logback.version>
+        <lombok.version>1.18.32</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
-        <slf4j.version>2.0.11</slf4j.version>
+        <slf4j.version>2.0.12</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.16.1</jackson-2-version>
-        <jackson-bom.version>2.16.1</jackson-bom.version>
+        <jackson-2-version>2.17.0</jackson-2-version>
+        <jackson-bom.version>2.17.0</jackson-bom.version>
 
         <!-- latest version for projects independent of an application server (AS) -->
         <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
@@ -138,20 +140,20 @@
         <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
         <!-- (check `version.asm` in maven3_repo\net\bytebuddy\byte-buddy-parent\x.y.z\byte-buddy-parent-x.y.z.pom) -->
         <asm.version>9.6</asm.version>
-        <byte-buddy.version>1.14.11</byte-buddy.version>
+        <byte-buddy.version>1.14.13</byte-buddy.version>
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.3.0</opentest4j.version>
-        <junit.platform.version>1.10.1</junit.platform.version>
-        <junit.jupiter.version>5.10.1</junit.jupiter.version>
+        <junit.platform.version>1.10.2</junit.platform.version>
+        <junit.jupiter.version>5.10.2</junit.jupiter.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <mockito.version>5.10.0</mockito.version>
-        <equalsverifier.version>3.15.6</equalsverifier.version>
-        <json.unit.version>3.2.2</json.unit.version>
+        <mockito.version>5.11.0</mockito.version>
+        <equalsverifier.version>3.16.1</equalsverifier.version>
+        <json.unit.version>3.2.7</json.unit.version>
         <jsonassert.version>1.5.1</jsonassert.version>
         <restassured.version>5.4.0</restassured.version>
         <wiremock2.version>2.27.2</wiremock2.version>
-        <wiremock.version>3.3.1</wiremock.version>
+        <wiremock.version>3.5.2</wiremock.version>
 
         <!-- Docker has a special DNS name 'host.docker.internal', but only starting with Docker 18.03... -->
         <!-- Simulating this variable depending on the OS (see also the profiles below overriding it) -->
@@ -696,11 +698,6 @@
                         <configuration>
                             <!-- starting with Java 9 javac should be called with -release N -->
                             <release>${java.release}</release>
-
-                            <!-- forbid the plugin to use the javax.tools Compiler API, because then sometimes -->
-                            <!-- you get an AssertionError in JavaCompiler.readSourceFile instead of a proper error message -->
-                            <!-- see https://issues.apache.org/jira/browse/MCOMPILER-346 -->
-                            <forceJavacCompilerUse>true</forceJavacCompilerUse>
                         </configuration>
                     </plugin>
                 </plugins>
