--- a/pom.xml
+++ b/pom.xml
@@ -81,19 +81,19 @@
         <!-- for plugins see also the section in README.md -->
 
         <!-- non-apache maven plugin versions -->
-        <asciidoctor.plugin.version>3.1.0</asciidoctor.plugin.version>
+        <asciidoctor.plugin.version>3.1.1</asciidoctor.plugin.version>
         <build-helper.plugin.version>3.6.0</build-helper.plugin.version>
         <docker.plugin.version>0.45.1</docker.plugin.version>
         <extra-enforcer-rules.plugin.version>1.9.0</extra-enforcer-rules.plugin.version>
         <jacoco.plugin.version>0.8.12</jacoco.plugin.version>
         <!-- the jandex version is overwritten in the quarkus modules -->
         <jandex.plugin.version>3.2.3</jandex.plugin.version>
-        <nexus-staging.plugin.version>1.6.13</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>7.9.0</openapi-generator.plugin.version>
+        <nexus-staging.plugin.version>1.7.0</nexus-staging.plugin.version>
+        <openapi-generator.plugin.version>7.10.0</openapi-generator.plugin.version>
         <!-- Don't use 3.0.57..3.0.64 because of https://github.com/swagger-api/swagger-codegen-generators/issues/1295 -->
         <!-- (still not fixed for non-spring apps, see https://github.com/swagger-api/swagger-codegen-generators/pull/1308) -->
         <swagger-codegen.plugin.version>3.0.56</swagger-codegen.plugin.version>
-        <versions.plugin.version>2.17.1</versions.plugin.version>
+        <versions.plugin.version>2.18.0</versions.plugin.version>
         <wildfly.plugin.version>5.0.1.Final</wildfly.plugin.version>
 
         <!-- apache maven plugin versions (in alphabetical order) -->
@@ -108,7 +108,7 @@
         <maven.failsafe.plugin.version>3.5.2</maven.failsafe.plugin.version>
         <maven.install.plugin.version>3.1.3</maven.install.plugin.version>
         <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
-        <maven.javadoc.plugin.version>3.11.1</maven.javadoc.plugin.version>
+        <maven.javadoc.plugin.version>3.11.2</maven.javadoc.plugin.version>
         <maven.rar.plugin.version>3.0.0</maven.rar.plugin.version>
         <maven.release.plugin.version>3.1.1</maven.release.plugin.version>
         <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
@@ -120,20 +120,18 @@
         <maven.war.plugin.version>3.4.0</maven.war.plugin.version>
 
         <!-- artifact versions -->
-        <!-- I observed slowness on CI/CD builds with versions 3.15.0+ -->
-        <!-- related to https://issues.apache.org/jira/projects/LANG/issues/LANG-1748 -->
-        <apache.commons.lang3.version>3.14.0</apache.commons.lang3.version>
+        <apache.commons.lang3.version>3.17.0</apache.commons.lang3.version>
         <logback.version>1.5.12</logback.version>
-        <lombok.version>1.18.34</lombok.version>
+        <lombok.version>1.18.36</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <mapstruct.version>1.5.5.Final</mapstruct.version>
-        <io.opentelemetry.instrumentation.version>2.9.0</io.opentelemetry.instrumentation.version>
+        <mapstruct.version>1.6.3</mapstruct.version>
+        <io.opentelemetry.instrumentation.version>2.10.0</io.opentelemetry.instrumentation.version>
         <slf4j.version>2.0.16</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.18.1</jackson-2-version>
-        <jackson-bom.version>2.18.1</jackson-bom.version>
+        <jackson-2-version>2.18.2</jackson-2-version>
+        <jackson-bom.version>2.18.2</jackson-bom.version>
 
         <!-- latest version for projects independent of an application server (AS) -->
         <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
@@ -160,12 +158,11 @@
         <junit.jupiter.version>5.11.3</junit.jupiter.version>
         <hamcrest.version>3.0</hamcrest.version>
         <mockito.version>5.14.2</mockito.version>
-        <equalsverifier.version>3.17.3</equalsverifier.version>
-        <json.unit.version>3.5.0</json.unit.version>
+        <equalsverifier.version>3.17.5</equalsverifier.version>
+        <json.unit.version>4.1.0</json.unit.version>
         <jsonassert.version>1.5.3</jsonassert.version>
         <restassured.version>5.5.0</restassured.version>
-        <wiremock2.version>2.27.2</wiremock2.version>
-        <wiremock.version>3.9.2</wiremock.version>
+        <wiremock.version>3.10.0</wiremock.version>
 
         <!-- Docker has a special DNS name 'host.docker.internal', but only starting with Docker 18.03... -->
         <!-- Simulating this variable depending on the OS (see also the profiles below overriding it) -->
@@ -454,18 +451,6 @@
                 <artifactId>wiremock</artifactId>
                 <version>${wiremock.version}</version>
                 <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.github.tomakehurst</groupId>
-                <artifactId>wiremock</artifactId>
-                <version>${wiremock2.version}</version>
-                <scope>test</scope>
-                <exclusions>
-                    <exclusion>
-                        <groupId>junit</groupId>
-                        <artifactId>junit</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
         </dependencies>
     </dependencyManagement>
