--- a/pom.xml
+++ b/pom.xml
@@ -11,23 +11,13 @@
     <name>${project.groupId}.${project.artifactId}</name>
 
     <modules>
-        <module>quarkus-3.8</module> <!-- 3.8 has LTS (https://quarkus.io/blog/quarkus-3-8-released/) -->
-        <module>quarkus-3.9</module>
-        <module>quarkus-3.10</module>
-        <module>quarkus-3.11</module>
-        <module>quarkus-3.12</module>
-        <module>quarkus-3.13</module>
-        <module>quarkus-3.14</module>
         <module>quarkus-3.15</module> <!-- 3.15 has LTS (https://quarkus.io/blog/quarkus-3-15-1-released/) -->
         <module>quarkus-3.16</module>
         <module>quarkus-3.17</module>
-        <module>wildfly-26.1</module>
-        <module>wildfly-28</module>
-        <module>wildfly-30</module>
-        <module>wildfly-31</module>
         <module>wildfly-32</module>
         <module>wildfly-33</module>
         <module>wildfly-34</module>
+        <module>wildfly-35</module>
         <module>update-checker</module>
     </modules>
 
@@ -90,7 +80,7 @@
         <!-- the jandex version is overwritten in the quarkus modules -->
         <jandex.plugin.version>3.2.3</jandex.plugin.version>
         <nexus-staging.plugin.version>1.7.0</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>7.10.0</openapi-generator.plugin.version>
+        <openapi-generator.plugin.version>7.11.0</openapi-generator.plugin.version>
         <!-- Don't use 3.0.57..3.0.64 because of https://github.com/swagger-api/swagger-codegen-generators/issues/1295 -->
         <!-- (still not fixed for non-spring apps, see https://github.com/swagger-api/swagger-codegen-generators/pull/1308) -->
         <swagger-codegen.plugin.version>3.0.56</swagger-codegen.plugin.version>
@@ -122,11 +112,11 @@
 
         <!-- artifact versions -->
         <apache.commons.lang3.version>3.17.0</apache.commons.lang3.version>
-        <logback.version>1.5.15</logback.version>
+        <logback.version>1.5.16</logback.version>
         <lombok.version>1.18.36</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.6.3</mapstruct.version>
-        <io.opentelemetry.instrumentation.version>2.11.0</io.opentelemetry.instrumentation.version>
+        <io.opentelemetry.instrumentation.version>2.12.0</io.opentelemetry.instrumentation.version>
         <slf4j.version>2.0.16</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
@@ -148,18 +138,21 @@
         <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
         <!-- (check `version.asm` in maven3_repo\net\bytebuddy\byte-buddy-parent\x.y.z\byte-buddy-parent-x.y.z.pom) -->
         <asm.version>9.7.1</asm.version>
-        <byte-buddy.version>1.15.11</byte-buddy.version>
+        <byte-buddy.version>1.16.1</byte-buddy.version>
 
         <!-- use the latest Bouncy Castle version despite what Quarkus defines in its BOM -->
-        <bouncycastle.version>1.79</bouncycastle.version>
+        <bouncycastle.version>1.80</bouncycastle.version>
+
+        <!-- use the latest Quarkus Logging from Quarkiverse -->
+        <quarkiverse.logging.version>3.1.0</quarkiverse.logging.version>
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.3.0</opentest4j.version>
         <junit.platform.version>1.11.4</junit.platform.version>
         <junit.jupiter.version>5.11.4</junit.jupiter.version>
         <hamcrest.version>3.0</hamcrest.version>
-        <mockito.version>5.14.2</mockito.version>
-        <equalsverifier.version>3.18</equalsverifier.version>
+        <mockito.version>5.15.2</mockito.version>
+        <equalsverifier.version>3.18.1</equalsverifier.version>
         <json.unit.version>4.1.0</json.unit.version>
         <jsonassert.version>1.5.3</jsonassert.version>
         <restassured.version>5.5.0</restassured.version>
@@ -228,11 +221,6 @@
                 <version>${apache.commons.lang3.version}</version>
             </dependency>
             <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-classic</artifactId>
-                <version>${logback.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
@@ -266,6 +254,16 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.loggingjson</groupId>
+                <artifactId>quarkus-logging-json</artifactId>
+                <version>${quarkiverse.logging.version}</version>
             </dependency>
 
             <!-- other dependencies -->
@@ -336,7 +334,7 @@
                 <artifactId>asm-analysis</artifactId>
                 <version>${asm.version}</version>
             </dependency>
-            
+
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk18on</artifactId>
